# AutoResearchClaw

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  web_ui.py
assets/logos/: README.txt
protocols/: Analisis_Rapido.md  Articulo_Revista_IMRaD.md  Auditoria_Protocolo_CEIm.md  Consulta_Clinica_PICO.md  Divulgacion_Familias.md  Poster_Congreso.md  Presentacion_PowerPoint.md  Reporte_Caso_CARE.md  Resumen_Congreso.md  Revision_Sistematica_PRISMA.md  Seguridad_y_Toxicidad.md
researchclaw/: abstract_generator.py  ceim_dossier.py  ceim_reviewer.py  cli.py  config.py  docx_generator.py  inference_backends.py  pdf_generator.py  poster_generator.py  pptx_generator.py  protocol_registry.py
researchclaw/literature/: clinicaltrials_client.py  novelty.py  openalex_client.py  pubmed_client.py  scite_client.py  search.py  semantic_scholar.py
researchclaw/llm/: client.py
researchclaw/pipeline/: contracts.py  executor.py  protocol.py  runner.py  stages.py
tests/: test_email_guardrails.py  test_inference_backends.py  test_output_guardrails.py  test_protocol_registry.py  test_rc_abstract.py  test_rc_audit_findings.py  test_rc_bib_propagation.py  test_rc_ceim.py  test_rc_ceim_dossier.py  test_rc_clinicaltrials.py  test_rc_contracts.py  test_rc_env_bootstrap.py  test_rc_executor.py  test_rc_exporters.py  test_rc_latex_sanitize.py  test_rc_ollama_robustness.py  test_rc_poster.py  test_rc_protocol.py  test_rc_section_helpers.py  test_rc_stage17_bibliographic.py  test_rc_stage23_fallback.py  test_rc_unicode_sanitize.py  test_web_ui_ceim.py
(+3 files in other folders)
