[project]
name = "researchclaw"
version = "1.0.0"
description = "ResearchClaw — Autonomous Research Pipeline. Turn any research idea into a paper."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "arxiv>=2.1",
    "numpy>=1.24",
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
anthropic = ["httpx>=0.24"]
web = ["scholarly>=1.7", "crawl4ai>=0.2", "tavily-python>=0.3"]
# Web UI: Gradio interface (web_ui.py).
# Install with:  pip install "researchclaw[ui]"
ui = ["gradio>=4.0"]
pdf = ["PyMuPDF>=1.23"]
# Multi-format export: Word, PDF (fpdf2), and PowerPoint generation.
# Install with:  pip install "researchclaw[export]"
export = [
    "python-docx>=1.1",
    "fpdf2>=2.7",
    "python-pptx>=0.6.21",
]
all = [
    "httpx>=0.24",
    "scholarly>=1.7",
    "crawl4ai>=0.2",
    "tavily-python>=0.3",
    "PyMuPDF>=1.23",
    "huggingface-hub>=0.20",
    "matplotlib>=3.7",
    "scipy>=1.10",
    # export
    "python-docx>=1.1",
    "fpdf2>=2.7",
    "python-pptx>=0.6.21",
    # ui
    "gradio>=4.0",
]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.scripts]
researchclaw = "researchclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["researchclaw", "sibyl", "arc"]

[tool.hatch.build.targets.wheel.force-include]
"researchclaw/templates/styles" = "researchclaw/templates/styles"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
